RESOLVED FIXED276371
X25519 key derivation fails in the checks for all-zero value results
https://bugs.webkit.org/show_bug.cgi?id=276371
Summary X25519 key derivation fails in the checks for all-zero value results
Javier Fernandez
Reported 2024-07-09 09:49:15 PDT
This bug is the cause of the faulures in the following tests LayoutTests/imported/w3c/web-platform-tests/WebCryptoAPI/derive_bits_keys/cfrg_curves_bits.https.any-expected.txt LayoutTests/imported/w3c/web-platform-tests/WebCryptoAPI/derive_bits_keys/cfrg_curves_bits.https.any.worker-expected.txt LayoutTests/imported/w3c/web-platform-tests/WebCryptoAPI/derive_bits_keys/cfrg_curves_keys.https.any-expected.txt LayoutTests/imported/w3c/web-platform-tests/WebCryptoAPI/derive_bits_keys/cfrg_curves_keys.https.any.worker-expected.txt
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-16 09:50:14 PDT
Nitin Mahendru
Comment 2 2024-08-23 11:06:38 PDT
EWS
Comment 3 2024-09-23 18:06:05 PDT
Committed 284127@main (e3c7046e8e5a): <https://commits.webkit.org/284127@main> Reviewed commits have been landed. Closing PR #32634 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.