Implement Zeros check for X25519 output https://bugs.webkit.org/show_bug.cgi?id=276371 rdar://131848801

Reviewed by Alex Christensen.

Check for all zero key and reject it.
The why is explained below:
https://datatracker.ietf.org/doc/html/rfc7748#section-6.1

This should make the below tests pass:
LayoutTests/imported/w3c/web-platform-tests/WebCryptoAPI/derive_bits_keys/cfrg_curves_bits.https.any-expected.txt
LayoutTests/imported/w3c/web-platform-tests/WebCryptoAPI/derive_bits_keys/cfrg_curves_bits.https.any.worker-expected.txt
LayoutTests/imported/w3c/web-platform-tests/WebCryptoAPI/derive_bits_keys/cfrg_curves_keys.https.any-expected.txt
LayoutTests/imported/w3c/web-platform-tests/WebCryptoAPI/derive_bits_keys/cfrg_curves_keys.https.any.worker-expected.txt

* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WTF/wtf/PlatformHave.h:
* Source/WebCore/crypto/algorithms/CryptoAlgorithmX25519.cpp:
(WebCore::CryptoAlgorithmX25519::deriveBits):

Canonical link: https://commits.webkit.org/284127@main